[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tile_Sets/ForestTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Backgrounds/forestback_short.png" type="Texture" id=4]
[ext_resource path="res://ChangeStage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pause.gd" type="Script" id=6]
[ext_resource path="res://Sprites/exit_button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/restart_button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/resume_button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/pausemenucontrol.png" type="Texture" id=10]
[ext_resource path="res://Gods/Dionysus.tscn" type="PackedScene" id=11]

[node name="StageOne" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0.4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -250 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 160 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -851969, 4, 0, -786433, 4, 0, -851948, 4, 0, -720897, 4, 0, -786412, 4, 0, -655361, 4, 0, -720876, 4, 0, -589825, 4, 0, -655354, 536870933, 0, -655353, 536870933, 0, -655352, 536870933, 0, -655351, 17, 0, -655350, 18, 0, -655349, 18, 0, -655348, 18, 0, -655347, 19, 0, -655346, 536870933, 0, -655340, 4, 0, -524289, 4, 0, -589824, 18, 0, -589823, 18, 0, -589822, 18, 0, -589821, 18, 0, -589820, 19, 0, -589808, 536870933, 0, -589807, 536870933, 0, -589806, 536870933, 0, -589804, 4, 0, -458753, 4, 0, -524288, 536870933, 0, -524287, 536870933, 0, -524286, 536870933, 0, -524285, 536870933, 0, -524284, 536870933, 0, -524283, 536870933, 0, -524282, 536870933, 0, -524280, 17, 0, -524279, 18, 0, -524278, 18, 0, -524277, 18, 0, -524276, 18, 0, -524275, 18, 0, -524274, 18, 0, -524273, 18, 0, -524272, 19, 0, -524268, 4, 0, -393217, 4, 0, -458748, 17, 0, -458747, 18, 0, -458746, 19, 0, -458744, 536870933, 0, -458743, 536870933, 0, -458742, 536870933, 0, -458741, 536870933, 0, -458740, 536870933, 0, -458739, 536870933, 0, -458738, 536870933, 0, -458737, 536870933, 0, -458732, 4, 0, -327681, 4, 0, -393211, 536870933, 0, -393210, 536870933, 0, -393203, 17, 0, -393202, 19, 0, -393196, 4, 0, -262145, 4, 0, -327677, 17, 0, -327676, 18, 0, -327675, 19, 0, -327663, 536870933, 0, -327662, 536870933, 0, -327660, 4, 0, -196609, 4, 0, -262139, 536870933, 0, -262138, 536870933, 0, -262131, 17, 0, -262130, 19, 0, -262129, 536870933, 0, -262128, 536870933, 0, -262124, 4, 0, -131073, 4, 0, -196606, 17, 0, -196605, 18, 0, -196604, 19, 0, -196602, 17, 0, -196601, 18, 0, -196600, 18, 0, -196599, 18, 0, -196598, 19, 0, -196595, 536870933, 0, -196594, 536870933, 0, -196588, 4, 0, -65537, 4, 0, -131072, 536870933, 0, -131071, 536870933, 0, -131070, 536870933, 0, -131069, 536870933, 0, -131067, 536870933, 0, -131066, 536870933, 0, -131061, 536870933, 0, -131060, 536870933, 0, -131059, 17, 0, -131058, 19, 0, -131052, 4, 0, -1, 4, 0, -65535, 17, 0, -65534, 18, 0, -65533, 19, 0, -65526, 17, 0, -65525, 18, 0, -65524, 19, 0, -65516, 4, 0, 65535, 4, 0, 5, 536870933, 0, 6, 536870933, 0, 7, 536870933, 0, 8, 17, 0, 9, 19, 0, 10, 536870933, 0, 11, 536870933, 0, 20, 4, 0, 131071, 4, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 19, 0, 65556, 4, 0, 196607, 4, 0, 131076, 17, 0, 131077, 18, 0, 131078, 19, 0, 131082, 17, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 19, 0, 131092, 4, 0, 262143, 4, 0, 196609, 536870933, 0, 196610, 536870933, 0, 196611, 536870933, 0, 196614, 536870933, 0, 196615, 536870933, 0, 196616, 536870933, 0, 196617, 536870933, 0, 196618, 536870933, 0, 196628, 4, 0, 327679, 4, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 19, 0, 262152, 17, 0, 262153, 19, 0, 262159, 17, 0, 262160, 18, 0, 262161, 18, 0, 262162, 18, 0, 262163, 18, 0, 262164, 4, 0, 393215, 4, 0, 327680, 536870933, 0, 327681, 536870933, 0, 327682, 536870933, 0, 327683, 536870933, 0, 327684, 536870933, 0, 327700, 4, 0, 458751, 4, 0, 393218, 17, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 19, 0, 393226, 17, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 19, 0, 393236, 4, 0, 524287, 4, 0, 458758, 536870934, 0, 458759, 536870934, 0, 458760, 536870934, 0, 458761, 536870934, 0, 458772, 4, 0, 589823, 4, 0, 524293, 536870934, 0, 524294, 0, 0, 524295, 1, 0, 524296, 1, 0, 524297, 2, 0, 524308, 4, 0, 655359, 4, 0, 589828, 536870934, 0, 589829, 0, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 2, 0, 589844, 4, 0, 720895, 4, 0, 655360, 536870933, 0, 655361, 536870933, 0, 655362, 536870933, 0, 655363, 536870934, 0, 655364, 0, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 5, 0, 655371, 536870934, 0, 655372, 536870934, 0, 655373, 536870934, 0, 655374, 536870934, 0, 655375, 536870934, 0, 655376, 536870934, 0, 655377, 536870934, 0, 655378, 536870934, 0, 655379, 536870934, 0, 655380, 4, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0 )

[node name="Slime" parent="." instance=ExtResource( 3 )]
position = Vector2( 271, 167 )

[node name="Slime2" parent="." instance=ExtResource( 3 )]
position = Vector2( 139, -56 )

[node name="Slime3" parent="." instance=ExtResource( 3 )]
position = Vector2( 198, 88 )

[node name="Slime4" parent="." instance=ExtResource( 3 )]
position = Vector2( 22, 8 )

[node name="ChangeStage" parent="." instance=ExtResource( 5 )]
position = Vector2( 185, -192 )
scale = Vector2( 2, 2 )
target_stage = "res://StageTwo.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Pause"]
margin_left = 40.0
margin_top = 22.5
margin_right = 360.0
margin_bottom = 202.5
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Pause"]
margin_left = 30.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause/MarginContainer"]
margin_right = 76.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )
size_flags_horizontal = 5
custom_constants/separation = 14
alignment = 1

[node name="Resume" type="TextureButton" parent="CanvasLayer/Pause/MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 76.0
margin_bottom = 71.0
texture_normal = ExtResource( 9 )

[node name="Restart" type="TextureButton" parent="CanvasLayer/Pause/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 76.0
margin_bottom = 95.0
texture_normal = ExtResource( 8 )

[node name="Exit" type="TextureButton" parent="CanvasLayer/Pause/MarginContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 76.0
margin_bottom = 119.0
texture_normal = ExtResource( 7 )

[node name="Dionysus" parent="." instance=ExtResource( 11 )]
position = Vector2( 290, 16 )

[connection signal="pressed" from="CanvasLayer/Pause/MarginContainer/VBoxContainer/Resume" to="CanvasLayer/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/MarginContainer/VBoxContainer/Restart" to="CanvasLayer/Pause" method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/MarginContainer/VBoxContainer/Exit" to="CanvasLayer/Pause" method="_on_Exit_pressed"]
